# futrader

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  config.toml  main.cpp  vcpkg.json
config/: bt.toml  ctp.toml  duckdb.toml  errors.toml  nng.toml  openctp.toml
overlays/python3/: vcpkg.json
src/: config.hpp  datatypes.h  quote.h  utils.hpp
src/bt_md/: CMakeLists.txt  bt_md.hpp  bt_md_test.cc  bt_pub.cpp
src/channel/: CMakeLists.txt  spsc.hpp  spsc_test.cc
src/common/: IQuoteProvider.h  i_quote_provider.h  quote_type.h  quotetype.h
src/ctpMd/: CMakeLists.txt  ctp_md.cpp  ctp_md.h  ctp_md_test.cc  mdclient.h
src/ctpTd/: CMakeLists.txt  ctp_td_test.cc
src/ctpTrader/: CMakeLists.txt  ctp_td.cpp  ctp_td_test.cc  tdclient.cpp  tdclient.h
src/ctp_md/: CMakeLists.txt  ctp_md.cpp  ctp_md.h  ctp_md.hpp  ctp_md_test.cc
src/ctp_td/: CMakeLists.txt  ctp_td.cpp  ctp_td.h  ctp_td_test.cc
src/data/: CMakeLists.txt  duck_loader.cpp  duck_loader.h  duck_loader_test.cc  duck_pub.cpp  nng_pub.cpp
src/datafeed/: reader.cpp  reader.h
src/md/: mdclient.cpp  mdclient.h
src/md_ctp/: CMakeLists.txt  md_ctp.h
src/operator/: CMakeLists.txt  rolling_test.cc
src/operators/: rolling.hpp
src/parser/: CMakeLists.txt  config.cc  config.h  config_parser.cpp  config_parser.h  config_parser_test.cc  config_test.cc  error_parser.hpp  error_parser_test.cc  string_parser.hpp  string_parser_test.cc  struct_parser.hpp  struct_parser_test.cc  tick_parser.hpp  tick_parser_test.cc
src/rolling/: mean.hpp
src/straCta/: aberation.cpp  aberation.h
src/strategy/: abberation.cpp  abberation.h  aberation.cpp  aberation.h
src/td/: tdclient.cpp  tdclient.h
